updated footer logos and fixed burger menu

--- a/adult-social-care-certificate.html
+++ b/adult-social-care-certificate.html
@@ -228,8 +228,8 @@
     </div>
   </section>
 
-  <!-- ========== FOOTER ========== -->
-   <footer class="footer">
+   <!-- ========== FOOTER ========== -->
+  <footer class="footer">
     <div class="container">
 
       <div class="footer-grid">
@@ -242,9 +242,7 @@
           <p class="footer-tagline">Working in Partnership to Deliver a High Quality Learning Experience</p>
           <p class="footer-sub">Ask U Training | In Association with GW Training</p>
           <div class="footer-accred-logos">
-            <!-- Replace with actual accreditation logos -->
-            <div class="img-placeholder small-placeholder"><span>Highfield</span></div>
-            <div class="img-placeholder small-placeholder"><span>Skills for Care</span></div>
+            <img src="images/highfield-qualifications-image.svg" alt="Highfield Qualifications" class="footer-accred-img">
           </div>
         </div>
 
@@ -283,7 +281,6 @@
 
     </div>
   </footer>
-
   <script src="main.js"></script>
 </body>
 </html>
