--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@
     </div>
   </section>
 
-  <!-- ========== FOOTER ========== -->
+   <!-- ========== FOOTER ========== -->
   <footer class="footer">
     <div class="container">
 
@@ -113,9 +113,9 @@
         <div class="footer-links">
           <h4>Quick Links</h4>
           <ul>
-            <li><a href="index.html#about">About Us</a></li>
-            <li><a href="index.html#funding">Funding (LDSS)</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#funding">Funding (LDSS)</a></li>
+            <li><a href="#contact">Contact Us</a></li>
           </ul>
         </div>
 
@@ -135,7 +135,6 @@
 
     </div>
   </footer>
-
   <script src="main.js"></script>
 </body>
 </html>
