--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>&copy; 2026 Ask U Training. All rights reserved.</p>
+        <p>&copy; 2026 Ask U Training &amp; GW Training. All rights reserved.</p>
         <p>Highfield Approved Training Provider &nbsp;|&nbsp; Centre Number: 40051</p>
       </div>
 
