Nav structure changes, extra courses to homepage, search filter bars added

--- a/contact.html
+++ b/contact.html
@@ -10,11 +10,8 @@
   <!-- ========== HEADER / NAV ========== -->
   <header class="header" id="header">
     <nav class="nav container">
-      <a href="index.html" class="nav-logo">
-        <div class="logo-text">
-          <strong><span class="logo-name-primary">Ask U</span><span class="logo-name-secondary"> Training</span></strong>
-          <small>In Association with GW Training</small>
-        </div>
+            <a href="index.html" class="nav-logo">
+        <img src="images/ask-u-training-gw-training-logo.svg" alt="Ask U Training in Association with GW Training" class="nav-logo-img">
       </a>
       <button class="burger" id="burger" aria-label="Toggle navigation menu" aria-expanded="false">
         <span></span><span></span><span></span>
@@ -22,47 +19,58 @@
       <ul class="nav-menu" id="navMenu">
         <li class="nav-item"><a href="index.html#about" class="nav-link">About Us</a></li>
 
-        <li class="nav-item has-dropdown nav-item-split" id="qualDropdown">
-          <a href="qualifications.html" class="nav-link">Courses</a>
+                        <li class="nav-item has-dropdown nav-item-split" id="qualDropdown">
+          <span class="nav-link nav-courses-label">Courses</span>
           <button class="nav-toggle-btn" aria-label="Toggle Submenu" aria-expanded="false">
             <svg class="chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round"><polyline points="6 9 12 15 18 9"></polyline></svg>
           </button>
-          <ul class="dropdown" role="menu">
-            <!-- Health & Social Care -->
-            <li class="has-submenu">
-              <a href="#" class="submenu-toggle">Health &amp; Social Care <svg class="chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
-              <ul class="dropdown dropdown-submenu">
-                <li><a href="adult-social-care-certificate.html">Level 2 - Adult Social Care Certificate</a></li>
-                <li><a href="diploma-adult-care-level-3.html">Level 3 - Diploma in Adult Care</a></li>
-                <li><a href="diploma-adult-care-level-4.html">Level 4 - Diploma in Adult Care</a></li>
-                <li><a href="leadership-management-adult-care.html">Level 5 - Leadership &amp; Management</a></li>
+          <ul class="dropdown mega-menu" role="menu">
+            <li class="mega-col">
+              <a href="health-social-care.html" class="mega-col-header">Health &amp; Social Care<span class="mega-col-expand">+</span></a>
+              <ul class="mega-course-list">
+                <li><a href="health-social-care.html#epilepsy-awareness">Epilepsy Awareness Training</a></li>
+                <li><a href="health-social-care.html#learning-disabilities">Learning Disabilities Awareness</a></li>
+                <li><a href="health-social-care.html#oral-health-care">Oral Health Care Training</a></li>
               </ul>
             </li>
-            <!-- Children's Residential -->
-            <li class="has-submenu">
-              <a href="#" class="submenu-toggle">Children's Residential Care <svg class="chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
-              <ul class="dropdown dropdown-submenu">
-                <li><a href="qualifications.html#childrens">Residential Childcare Courses</a></li>
-              </ul>
+            <li class="mega-col">
+              <a href="contact.html" class="mega-col-header">Health &amp; Safety</a>
             </li>
-            <!-- Early Years -->
-            <li class="has-submenu">
-              <a href="#" class="submenu-toggle">Early Years Training <svg class="chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
-              <ul class="dropdown dropdown-submenu">
-                <li><a href="qualifications.html#early-years">Early Years Courses</a></li>
-              </ul>
+            <li class="mega-col">
+              <a href="childrens-residential.html" class="mega-col-header">Child Care Training</a>
             </li>
-            <!-- Trainer / Assessor -->
-            <li class="has-submenu">
-              <a href="#" class="submenu-toggle">Trainer &amp; Assessor <svg class="chevron" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="6 9 12 15 18 9"></polyline></svg></a>
-              <ul class="dropdown dropdown-submenu">
-                <li><a href="qualifications.html#trainer">Education &amp; Training Courses</a></li>
+            <li class="mega-col">
+              <a href="early-years.html" class="mega-col-header">Childcare &amp; Education</a>
+            </li>
+            <li class="mega-col">
+              <a href="contact.html" class="mega-col-header">Leadership, Management &amp; Business</a>
+            </li>
+            <li class="mega-col">
+              <a href="contact.html" class="mega-col-header">Champions in Care Training</a>
+            </li>
+            <li class="mega-col">
+              <a href="contact.html" class="mega-col-header">First Aid</a>
+            </li>
+            <li class="mega-col">
+              <a href="diploma-training-courses-uk.html" class="mega-col-header">Diploma Training<span class="mega-col-expand">+</span></a>
+              <ul class="mega-course-list">
+                <li><a href="diploma-training-courses-uk.html#adult-care-diplomas">Adult Care Diplomas (Levels 2&ndash;5)</a></li>
+                <li><a href="diploma-training-courses-uk.html#adult-care-unit-guidance">Adult Care Diploma Unit Guidance</a></li>
+                <li><a href="diploma-training-courses-uk.html#residential-child-care">Residential Child Care Diplomas</a></li>
+                <li><a href="diploma-training-courses-uk.html#teaching-learning-schools">Supporting Teaching &amp; Learning in Schools</a></li>
+                <li><a href="diploma-training-courses-uk.html#teaching-learning-unit-guidance">Supporting Teaching &amp; Learning Unit Guidance</a></li>
+                <li><a href="diploma-training-courses-uk.html#child-care-unit-guidance">Child Care Unit Support &amp; Guidance</a></li>
+                <li><a href="diploma-training-courses-uk.html#management-diplomas">Management Diplomas</a></li>
+                <li><a href="diploma-training-courses-uk.html#customer-service-diploma">Customer Service Diploma</a></li>
+                <li><a href="diploma-training-courses-uk.html#business-admin-diploma">Business Administration Diploma</a></li>
+                <li><a href="diploma-training-courses-uk.html#adult-social-care-certificate">Adult Social Care Certificate</a></li>
+                <li><a href="diploma-training-courses-uk.html#early-years-educator">Early Years Educator (EYE) Diploma</a></li>
               </ul>
             </li>
           </ul>
         </li>
 
-        <li class="nav-item"><a href="index.html#funding" class="nav-link">Funding</a></li>
+        <li class="nav-item"><a href="news.html" class="nav-link">News</a></li>
         <li class="nav-item nav-cta-item"><a href="contact.html" class="btn btn-nav">Contact</a></li>
       </ul>
       <div class="nav-overlay" id="navOverlay"></div>
@@ -248,13 +256,13 @@
           </div>
         </div>
 
-        <div class="footer-links">
-          <h4>Qualifications</h4>
+                <div class="footer-links">
+          <h4>Courses</h4>
           <ul>
-            <li><a href="adult-social-care-certificate.html">Level 2 - Adult Social Care</a></li>
-            <li><a href="diploma-adult-care-level-3.html">Level 3 - Diploma in Adult Care</a></li>
-            <li><a href="diploma-adult-care-level-4.html">Level 4 - Diploma in Adult Care</a></li>
-            <li><a href="leadership-management-adult-care.html">Level 5 - Leadership &amp; Management</a></li>
+            <li><a href="health-social-care.html">Health &amp; Social Care</a></li>
+            <li><a href="childrens-residential.html">Children's Residential Care</a></li>
+            <li><a href="early-years.html">Early Years Training</a></li>
+            <li><a href="trainer-assessor.html">Trainer &amp; Assessor</a></li>
           </ul>
         </div>
 
