--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </div>
 
       <div class="slide slide-2">
-       <img src="images/adult-care-card.png" alt="Health and social care professionals">
+       <img src="images/adult-care-hero.jpg" alt="Health and social care professionals">
       </div>
 
       <div class="slide slide-3">
